Fixed issue as was not showing

--- a/src/Sub-Components/Modal/Modal.scss
+++ b/src/Sub-Components/Modal/Modal.scss
@@ -40,7 +40,8 @@
         top:0;
         left:0;
         display: none;
-        background-color: rgba($color: var(--bg-color-1), $alpha: 0.85);
+        background-color: var(--bg-color-1);
+        opacity: 0.85;
     }
 }
 
